ADDED #13 Users followers/followings api, docs and tests
