# app/Http/Resources/UserResource.php
@@ -17,6 +17,7 @@ class UserResource extends JsonResource
         return [
             'id' => $this->id,
             'name' => $this->name,
+            'is_following' => auth()->user()->whereRelation('followings', 'following_id', $this->id)->exists()
         ];
     }
 }
