# public/docs/openapi.yaml
@@ -852,7 +852,7 @@ paths:
         in: path
         name: comment_id
         description: 'The ID of the comment.'
-        example: et
+        example: alias
         required: true
         schema:
           type: string
@@ -1312,7 +1312,7 @@ paths:
         in: path
         name: id
         description: 'The ID of the comment.'
-        example: 12
+        example: 6
         required: true
         schema:
           type: integer
@@ -1914,6 +1914,224 @@ paths:
                     example: 'Access Denied'
       tags:
         - Authentication
+  /api/v1/user/followings:
+    get:
+      summary: 'Get all followings'
+      operationId: getAllFollowings
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {USER_TOKEN_KEY}'
+          schema:
+            type: string
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: success
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  followings: []
+                properties:
+                  followings:
+                    type: array
+                    example: []
+      tags:
+        - User
+  /api/v1/user/followers:
+    get:
+      summary: 'Get all followers'
+      operationId: getAllFollowers
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {USER_TOKEN_KEY}'
+          schema:
+            type: string
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: success
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  followers: []
+                properties:
+                  followers:
+                    type: array
+                    example: []
+      tags:
+        - User
+  /api/v1/user/follow:
+    post:
+      summary: 'Follow another user'
+      operationId: followAnotherUser
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {USER_TOKEN_KEY}'
+          schema:
+            type: string
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: success
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: 'You are now following this user'
+                properties:
+                  message:
+                    type: string
+                    example: 'You are now following this user'
+        400:
+          description: 'Not Found'
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: 'You are already following this user'
+                properties:
+                  message:
+                    type: string
+                    example: 'You are already following this user'
+      tags:
+        - User
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                user_id:
+                  type: integer
+                  description: 'The id of the user to follow'
+                  example: 15
+              required:
+                - user_id
+  /api/v1/user/unfollow:
+    post:
+      summary: 'Unfollow another user'
+      operationId: unfollowAnotherUser
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {USER_TOKEN_KEY}'
+          schema:
+            type: string
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: success
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: 'You are now unfollowing this user'
+                properties:
+                  message:
+                    type: string
+                    example: 'You are now unfollowing this user'
+        400:
+          description: 'Not Found'
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: 'You are not following this user'
+                properties:
+                  message:
+                    type: string
+                    example: 'You are not following this user'
+      tags:
+        - User
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                user_id:
+                  type: integer
+                  description: 'The id of the user to unfollow'
+                  example: 4
+              required:
+                - user_id
   /api/v1/user/settings:
     get:
       summary: 'Get settings of logged in user'
@@ -2064,6 +2282,9 @@ tags:
     description: ''
   -
     name: Authentication
+    description: ''
+  -
+    name: User
     description: ''
   -
     name: 'User Settings'
